--- a/package.json
+++ b/package.json
@@ -22,6 +22,11 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "@ng-bootstrap/ng-bootstrap": "^2.0.0",
+    "@progress/kendo-angular-buttons": "^4.1.1",
+    "@progress/kendo-angular-dialog": "^3.6.1",
+    "@progress/kendo-angular-l10n": "^1.2.0",
+    "@progress/kendo-angular-layout": "^3.1.0",
+    "@progress/kendo-theme-default": "^2.53.2",
     "cesium": "^1.45.0",
     "core-js": "^2.4.1",
     "rxjs": "^5.5.6",
