--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve -o --proxy-config proxy.conf.json",
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
@@ -24,6 +24,7 @@
     "@ng-bootstrap/ng-bootstrap": "^2.0.0",
     "@progress/kendo-angular-buttons": "^4.1.1",
     "@progress/kendo-angular-dialog": "^3.6.1",
+    "@progress/kendo-angular-dropdowns": "^3.0.1",
     "@progress/kendo-angular-inputs": "^3.1.2",
     "@progress/kendo-angular-intl": "^1.4.1",
     "@progress/kendo-angular-l10n": "^1.2.0",
